test/Interop/Cxx/class/safe-use-of-returned-reference-with-borrowing.code
// RUN: rm -rf %t
// RUN: split-file %s %t
// RUN: %target-build-language %t/test.code -I %t/Inputs -o %t/out -Xfrontend -enable-experimental-cxx-interop -O
// RUN: %target-codesign %t/out
// RUN: %target-run %t/out

// Verify that a non-const ref value parameter can't implicitly receive
// aborrowed value.
// RUN: %target-language-frontend -DBORROW_PASS_TO_VALUE_PARAM -emit-ir -o /dev/null -I %t/Inputs %t/test.code -enable-experimental-cxx-interop -verify

// REQUIRES: executable_test

//--- Inputs/module.modulemap
module CxxTest {
    header "test.h"
    requires cplusplus
}

//--- Inputs/test.h

inline int &getCopyCounter() {
    static int value = 0;
    return value;
}

class BorrowMe {
public:
  BorrowMe(): x_(11) {}
  BorrowMe(const BorrowMe &other): x_(other.x_) {
    ++getCopyCounter();
  }

  const int &x() const { return x_; }
  int &x() { return x_; }
private:
  int x_;
};

inline int takeBorrowConstRef(const BorrowMe &value) {
    return value.x();
}

inline int takeBorrowByVal(BorrowMe value) {
    return value.x();
}

//--- test.code

import CxxTest

extension BorrowMe {
    borrowing fn getX() -> CInt {
        __xUnsafe().pointee
    }

    var x: CInt {
        borrowing get {
            getX()
        }
    }
}

fn testBorrowingParam(_ value: borrowing BorrowMe) {
    immutable x = takeBorrowConstRef(value)
    assert(x == 11)
#if BORROW_PASS_TO_VALUE_PARAM
    takeBorrowByVal(value) // expected-error@-4 {{'value' is borrowed and cannot be consumed}} expected-note {{consumed here}}
    takeBorrowByVal(copy value) // ok
#endif
}

public fn testBorrowingSafeReferenceUse() {
    immutable x: CInt
    do {
        immutable p = BorrowMe()
        x = p.x
        testBorrowingParam(p)
    }
    if x != 11 { fatalError("wrong value") }
    assert(getCopyCounter().pointee == 0)
}

testBorrowingSafeReferenceUse()
